<resources>
    <string name="app_name">Tareas</string>
    <string name="btn_tareas">Agregar Tarea</string>
    <string name="nombre_de_la_tarea">Nombre de la tarea</string>
    <string name="insertar_descripci_n_de_la_tarea">Descripción de la tarea</string>
    <string name="acceso_al_sistema">Acceso al Sistema</string>
    <string name="edit_add_tarea">Añadir / Editar Tarea</string>
    <string name="actualizar_tarea">Actualizar Tarea</string>
    <string name="cancelar">Cancelar</string>
    <string name="eliminar_todas_las_tareas">Eliminar todas las tareas</string>
    <string name="descripcion_de_la_actividad">Descripción de la actividad</string>
    <string name="aniadir_actividad">Añadir actividad</string>
    <string name="actualizar_actividad">Actualizar actividades</string>
    <string name="editar_tarea">Editar tarea</string>
    <string name="aceptar">Aceptar</string>
</resources>
