<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.EditTareaActivity">

    <EditText
        android:id="@+id/EditTarea2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/insertar_descripci_n_de_la_tarea" />

    <Button
        android:id="@+id/btn_edit_tarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actualizar_tarea" />

    <Button
        android:id="@+id/btn_cancel_tarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"/>
</LinearLayout>
